<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/prompting_option"
        android:title="@string/prompting_option_text"
        android:titleCondensed="@string/prompting_option_text"/>
    <item
        android:id="@+id/reinforcement_option"
        android:title="@string/reinforcement_option_text"
        android:titleCondensed="@string/reinforcement_option_text"/>
    <item
        android:id="@+id/end_option"
        android:title="@string/end_exercises_option_text"/>

    <item
        android:id="@+id/back_menu_option"
        android:title="Voltar para aulas"
        />
    <!--android:showAsAction="never"-->


    <!--<item
        android:id="@+id/home_option"
        android:showAsAction="never"
        android:title="@string/home_option_text"/>

    <item
        android:id="@+id/prompting_option"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView|withText"
        android:title="@string/prompting_option_text"
        android:titleCondensed="@string/prompting_option_text"
        android:actionLayout="@layout/switch_prompting"/>
    
    <item
        android:id="@+id/reinforcement_option"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView|withText"
        android:title="@string/reinforcement_option_text"
        android:titleCondensed="@string/reinforcement_option_text"
        android:actionLayout="@layout/switch_reinforcement"/>-->

    <item
        android:id="@+id/exit"
        android:title="@string/exit_aplication"
        android:titleCondensed="@string/exit" />
        <!--android:orderInCategory="100"-->
        <!--android:showAsAction="never"-->

<!-- 
 <item
        android:id="@+id/prompting_option"
        android:showAsAction="always"
        android:title="@string/prompting_option_text"
        android:titleCondensed="@string/prompting_option_text"
        android:actionLayout="@layout/switch_prompting">
  	
  	<group
  	    android:id="@+id/checkable_group"
        android:checkableBehavior="all">
         
        <item
           android:id="@+id/prompting_check"
           android:showAsAction="always|withText"
           android:title="@string/prompting_option_text"
           android:titleCondensed="@string/prompting_option_text"         
           android:actionViewClass="android.widget.CheckBox" />
          	    
  	</group>
  	
  </item>
 -->
    
</menu>